tests/ui/missing_repr.stderr
error: missing `repr` attribute
 --> tests/ui/missing_repr.rs:3:23
  |
3 | #[derive(Clone, Copy, IntEnum)]
  |                       ^^^^^^^
  |
  = note: this error originates in the derive macro `IntEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
